--- a/xServer/Gemfile
+++ b/xServer/Gemfile
@@ -6,6 +6,7 @@ group :test, :development do
   gem 'database_cleaner'
   gem 'rspec'
   gem 'capybara'
+  gem 'byebug'
   gem 'rspec-sinatra'
 end
 
